[package]
name = "openzt-loader"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
object = "0.29.0"
dll-syringe = "0.13.1"
winapi = {version = "0.3.8", features = ["tlhelp32"]}
tracing-subscriber = "0.3.16"
tracing = "0.1.37"
clap = { version = "4.1.8", features = ["derive"] }