[package]
name = "openzt-loader"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dll-syringe = "0.15.2"
winapi = {version = "0.3.9", features = ["tlhelp32"]}
tracing-subscriber = "0.3.18"
tracing = "0.1.40"
clap = { version = "4.4.14", features = ["derive"] }
openzt = { path = "../openzt" }